mmsb-core/tests/compile_fail/construct_token.stderr
error: cannot construct `JudgmentToken` with struct literal syntax due to private fields
 --> tests/compile_fail/construct_token.rs:4:18
  |
4 |     let _token = JudgmentToken { _private: () };
  |                  ^^^^^^^^^^^^^   ------------ private field
  |
  = note: ...and other private field `token` that was not provided
help: you might have meant to use an associated function to build this type
  |
4 -     let _token = JudgmentToken { _private: () };
4 +     let _token = JudgmentToken::new(_);
  |
4 -     let _token = JudgmentToken { _private: () };
4 +     let _token = JudgmentToken::test_only();
  |
